[package]
name = "addrforge"
version = "0.8.0"
edition = "2021"

[[bin]]
name = "addrforge"
path = "src/main.rs"

[dependencies]
bitcoin           = { version = "=0.30.2", features = ["rand-std"] }
secp256k1         = { version = "=0.27.0", features = ["rand-std", "global-context"] }
crossbeam-channel = "=0.5.11"
hex               = "=0.4.3"
anyhow            = "=1.0.79"
crossterm         = "=0.27.0"
regex             = "=1.10.3"
clap              = { version = "=4.4.18", features = ["derive"] }

[profile.release]
opt-level     = 3
lto           = true
codegen-units = 1