[package]
name = "addrforge"
version = "0.9.0"
edition = "2021"

[[bin]]
name = "addrforge"
path = "src/main.rs"

[dependencies]
bitcoin           = { version = "=0.32.8", features = ["rand-std"] }
secp256k1         = { version = "=0.29.1", features = ["rand-std", "global-context"] }
bip39             = "=2.2.2"
musig2            = "=0.1.1"
crossbeam-channel = "=0.5.11"
hex               = "=0.4.3"
anyhow            = "=1.0.79"
crossterm         = "=0.27.0"
ratatui           = { version = "=0.27.0", default-features = false, features = ["crossterm"] }
regex             = "=1.10.3"
clap              = { version = "=4.4.18", features = ["derive"] }
dirs              = "=5.0.1"
# Pin unicode-segmentation to avoid the 1.13.2 rustc 1.85 requirement
unicode-segmentation = "=1.12.0"

[profile.release]
opt-level     = 3
lto           = true
codegen-units = 1
